Columns gapless fix

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -9776,6 +9776,7 @@ body.understrap-no-sidebar .alignwide {
 }
 .wp-block-columns.is-style-gapless, .wp-block-columns.is-style-gapless-border {
   gap: 0;
+  margin-bottom: 0;
 }
 .wp-block-columns.is-style-gapless-border > .wp-block-column {
   border: 1px solid #cdcdcd;
