--- a/src/sass/theme/_blocks.scss
+++ b/src/sass/theme/_blocks.scss
@@ -212,6 +212,7 @@ body.understrap-no-sidebar {
     &.is-style-gapless,
     &.is-style-gapless-border {
             gap: 0;
+            margin-bottom: 0;
     }
 
     &.is-style-gapless-border {
